Fixes #3142: Demo page's large heading should be clickable
svn changeset:8666 branch:6.1

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -47,14 +47,18 @@
 		
 		<div id="upfront">
 			<div id="sampler">
+				<a href="sampler/" class="demoapp">
 				<h2>Vaadin Sampler</h2>
 				<p>Sampler contains examples of most features, as well as combination examples and useful UI patterns that you can use simply by copy-pasting the code.</p>
-				<p><a href="sampler/" class="demoapp">Start Sampler &raquo;</a>
+				<strong>Start Sampler &raquo;</strong>
+				</a>
 			</div>
 			<div id="eclipse">
+				<a href="http://www.vaadin.com/eclipse">
 				<h2>Vaadin Eclipse Plugin</h2>
 				<p>The easiest way to start working with Vaadin is to use Eclipse IDE and download the Vaadin Eclipse plugin from our website.</p>
-				<p><a href="http://www.vaadin.com/eclipse">How to install the Vaadin Eclipse Plugin &raquo;</a>
+				<strong>How to install the Vaadin Eclipse Plugin &raquo;</strong>
+				</a>
 			</div>
 		</div> <!-- /upfront -->
 		
