Updated Release Notes for Vaadin 6.1.0.
svn changeset:8668 branch:6.1

--- a/WebContent/release-notes.html
+++ b/WebContent/release-notes.html
@@ -249,10 +249,12 @@ debugging in hosted mode in Linux.</p>
 build from GWT trunk and is not 100% compatible with the official GWT
 1.7.0 release (<a href="http://dev.vaadin.com/ticket/3270">#3270</a>).</p>
 
-<p>As the OOPHM package is experimental, you should use it only for
-debugging purposes during development. For production use, you should
-compile your custom widget sets with the regular Vaadin package
-for your platform.</p>
+<p>As the OOPHM package is experimental and because there are
+differences between the version packaged with Vaadin and the official
+version of GWT, you should use it only for debugging purposes during
+development. For production use, and generally when you absolutely do
+not need to debug using OOPHM, you should compile your custom widget
+sets with the regular Vaadin package for your platform.</p>
 
 <h2><a name="known-problems">Important known problems in Vaadin @version@</a></h2>
 
